force-app/main/default/objects/Index_Card__c/Index_Card__c.object-meta.xml
<CustomObject>
    <description>A document listed with it&apos;s taxonomy which is available in the Publications Library</description>
    <label>Index Card</label>
    <nameField>
        <label>Index Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Index Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>