force-app/main/default/objects/Index_Card__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Author&apos;s name</description>
    <label>Author</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>