force-app/main/default/objects/Index_Card__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <description>Card serial number</description>
    <displayFormat>Crd-{0000}</displayFormat>
    <label>Card Number</label>
    <type>AutoNumber</type>
</CustomField>