force-app/main/default/objects/Index_Card__c/fields/Date_Authored__c.field-meta.xml
<CustomField>
    <fullName>Date_Authored__c</fullName>
    <description>Date the work was authored or released or closest approximation</description>
    <label>Date Authored</label>
    <required>true</required>
    <type>Date</type>
</CustomField>