force-app/main/default/objects/Index_Card__c/fields/Filename__c.field-meta.xml
<CustomField>
    <fullName>Filename__c</fullName>
    <description>Filename</description>
    <label>Filename</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>