force-app/main/default/objects/Index_Card__c/fields/Last_Year_Tally__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Tally__c</fullName>
    <description>Sum of Distributions from Last Year</description>
    <label>Last Year Tally</label>
    <summaryFilterItems>
        <field>Distribution__c.Distribution_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Distribution__c.Index_Card__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>