force-app/main/default/objects/Index_Card__c/fields/Psort__c.field-meta.xml
<CustomField>
    <fullName>Psort__c</fullName>
    <description>Parent Sort Key for driving Index Card Kanban Lists</description>
    <inlineHelpText>Parent Sort Key for driving Index Card Kanban Lists</inlineHelpText>
    <label>Psort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>3500</fullName>
            </value>
            <value>
                <fullName>3800</fullName>
            </value>
            <value>
                <fullName>4000</fullName>
            </value>
            <value>
                <fullName>4500</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>5500</fullName>
            </value>
            <value>
                <fullName>6000</fullName>
            </value>
            <value>
                <fullName>6500</fullName>
            </value>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>7500</fullName>
            </value>
            <value>
                <fullName>8000</fullName>
            </value>
            <value>
                <fullName>8500</fullName>
            </value>
            <value>
                <fullName>9000</fullName>
            </value>
            <value>
                <fullName>9200</fullName>
            </value>
            <value>
                <fullName>9300</fullName>
            </value>
            <value>
                <fullName>9500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>