force-app/main/default/objects/Index_Card__c/fields/Taxonomy_Category__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taxonomy Category</label>
    <referenceTo>Taxonomy_Category__c</referenceTo>
    <relationshipLabel>Index Cards</relationshipLabel>
    <relationshipName>Index_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>