force-app/main/default/objects/Index_Card__c/fields/Taxonomy_Number__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Number__c</fullName>
    <description>Ex: 1000 AD For &quot;Category:Advocacy Abbreviation: AD&quot;
Ex: 1500 HS AL For &quot;Parent Category: 1500  Activities of Daily Living Category:Home Safety&quot;</description>
    <label>Taxonomy Number</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>