force-app/main/default/objects/Index_Card__c/fields/This_Year_Tally__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Tally__c</fullName>
    <description>A sum of all distributions</description>
    <label>This Year Tally</label>
    <summaryFilterItems>
        <field>Distribution__c.Distribution_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Distribution__c.Index_Card__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>