force-app/main/default/objects/Index_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Card_Number__c</columns>
    <columns>Taxonomy_Number__c</columns>
    <columns>Filename__c</columns>
    <columns>Author__c</columns>
    <columns>Date_Authored__c</columns>
    <columns>Psort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>